# NextBeat

./: .gitignore  README.md  pyproject.toml
api/: main.py  requirements.txt
backend/: README.md  package-lock.json  package.json
backend/src/: index.ts  types.ts
backend/src/agent/: llm.ts  magenta.ts  tools.ts
backend/src/routes/: agent.ts
docs/: AI_BEAT_ARCHITECTURE_RESEARCH.md  AI_PIPELINE_PROPOSAL.md
frontend/: README.md  package-lock.json  package.json
frontend/app/api/generate/: route.ts
frontend/components/: AgentPanel.tsx  BottomBar.tsx  PianoRollView.tsx  PlaylistView.tsx  TrackBrowserModal.tsx  TrackSettingsMenu.tsx  TransportBar.tsx
frontend/hooks/: useInstruments.ts  useMidiPlayer.ts  usePlayback.ts
frontend/nextbeat/components/: MainWorkspace.tsx  PianoRollView.tsx  TransportBar.tsx
frontend/nextbeat/stores/: projectStore.ts
frontend/stores/: projectStore.ts
frontend/types/: project.ts
frontend/utils/: agentClient.ts  instruments.ts  midiExport.ts  midiGenerateClient.ts  midiHumanize.ts  soundfont.ts
