[project]
name = "nextbeat"
version = "1.0.0"
description = "NextBeat - Full-stack application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "anthropic>=0.40.0",
    "note-seq>=0.0.5",
    "pretty-midi>=0.2.10",
    "mido>=1.3.0",
]

[project.optional-dependencies]
magenta = [
    "magenta>=2.1.4",
]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["node_modules", ".next", "out"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "node_modules|.next|out"
